--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,195 @@
 .App {
+  background-color: #141c3b;
+  padding: 100px;
+}
+
+.hello {
+  color: #66fcf1;
+  font-size: 90px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.green {
+  color: #66fcf1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.description {
+  font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
+  max-width: 900px;
+  text-align: justify;
+  margin: auto;
+  margin-top: 20px;
+  padding-bottom: 30px;
+  letter-spacing: 2px;
+  line-height: 28px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.builders {
+  margin-top: 100px;
+}
+
+.builders img {
+  width: 260px;
+  height: 200px !important;
+}
+
+.aboutme {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 150px;
+  margin-top: 150px;
+  flex-wrap: wrap;
+}
+.whoamIdesc {
+  display: flex;
+  justify-content: space-between;
+  row-gap: 20px;
+  margin-top: 60px;
+}
+
+.whoamI {
+  color: #e8fffe;
+  font-size: 40px;
+  font-family: "Kdam Thmor Pro", sans-serif;
+  display: flex;
+}
+
+.imageContainer img {
+  height: 470px;
+  margin-top: 90px;
+  margin-right: 90px;
+  border-radius: 20px;
+  position: relative;
+  border-radius: 20px;
+  mix-blend-mode: luminosity;
+  filter: grayscale(100%) contrast(1);
+  transform: translateZ(0);
+  transition: opacity 0.25s linear;
+}
+
+.imageContainer img:hover {
+  height: 470px;
+  margin-top: 90px;
+  margin-right: 90px;
+  border-radius: 20px;
+  position: relative;
+  border-radius: 20px;
+  mix-blend-mode: unset;
+  filter: none !important;
+}
+.aboutmedescp {
+  font-size: 18px;
+  text-align: justify;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(206, 198, 198);
+  max-width: 700px;
+  letter-spacing: 1px;
+  margin-top: 10px;
+  line-height: 27px;
+  padding-top: 10px;
+  padding-bottom: 120px;
+}
+
+.techstack {
+  margin-top: 60px;
+  display: flex;
+  row-gap: 40px;
+  column-gap: 60px;
+  flex-wrap: wrap;
+}
+
+.softwareEngineer {
+  font-size: 20px;
+  text-align: justify;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
+  max-width: 800px;
+  color: #66fcf1;
+  letter-spacing: 2px;
+  margin-bottom: 70px;
+}
+
+.google {
+  font-size: 20px;
+  text-align: justify;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
+  max-width: 800px;
+  line-height: 28px;
+  letter-spacing: 2px;
+}
+
+.aboutmedescp2 {
+  font-size: 15px;
+  text-align: justify;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(206, 198, 198);
+  max-width: 1000px;
+  letter-spacing: 1px;
+  margin-top: 30px;
+  padding-top: 10px;
+  line-height: 28px;
+}
+
+.project {
+  padding: 20px;
+  margin-top: 10px;
+  border-radius: 20px;
+}
+
+.project:hover {
+  background-color: rgba(83, 95, 113, 0.252);
+}
+
+.line {
+  height: 1px;
+  width: 200px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgb(137, 147, 147);
+  margin: auto;
+  margin-left: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.lineContainer {
+  position: fixed;
+  right: -220px;
+  bottom: 220px;
+  display: flex;
+  flex-direction: row;
+  transform: rotate(90deg);
+  color: rgb(137, 147, 147);
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lineContainer:hover {
+  position: fixed;
+  color: #66fcf1;
+}
+
+.email {
+  font-size: 15px;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.projects {
+  margin-top: 200px;
+}
+
+.hrLine {
+  height: 1px;
+  width: 200px;
+  background-color: rgb(178, 178, 178);
+  align-items: center;
+  margin: auto 12px;
 }
